crates/wyrd-for-games/tests/ui/weave_unknown_binding.stderr
error[E0425]: cannot find value `missing` in this scope
  --> tests/ui/weave_unknown_binding.rs:10:13
   |
10 |             missing.out -> sink.in;
   |             ^^^^^^^ not found in this scope
